# mtg-reanimator

./: Cargo.toml  README.md  RUST_CONVERSION_SUMMARY.md  benchmark.ts  cards.json  deck.txt  deck10.txt  deck2.txt  deck3.txt  deck4.txt  deck5.txt  deck6.txt  deck7.txt  deck8.txt  deck9.txt  deck9.txt~  deck_02e7a697.txt  deck_0a8397cb.txt  deck_0c7ba4e5.txt  deck_13d0d277.txt  deck_162642a6.txt  deck_23ff1ac8.txt  deck_2863e95d.txt  deck_2e3a420b.txt  deck_3574598c.txt  deck_448ff93d.txt  deck_52d3f32d.txt  deck_5b850874.txt  deck_66323fe6.txt  deck_73a8ce61.txt  deck_7ae9f36f.txt  deck_7c75b3a4.txt  deck_839eb7c5.txt  deck_91288953.txt  deck_928e5674.txt  deck_a2b3a9f8.txt  deck_ae794c53.txt  deck_ardyn.txt  deck_ardyn_only.txt  deck_b5daa998.txt  (+17 more)
benches/: game_simulation.rs
java/: benchmark.sh  pom.xml  verify.sh
java/src/main/java/com/mtg/reanimator/: Main.java
java/src/main/java/com/mtg/reanimator/card/: BaseCard.java  Card.java  CardDatabase.java  CardDatabaseException.java  CardNames.java  CardType.java  ColorFlags.java  CreatureCard.java  LandCard.java  LandSubtype.java  ManaColor.java  ManaCost.java  SagaCard.java  SpellCard.java
java/src/main/java/com/mtg/reanimator/game/: CardActions.java  (+6 more)
java/src/main/resources/: cards.json
src/: integration_tests.rs  lib.rs  main.rs  rng.rs
src/card/: abilities.rs  database.rs  mod.rs  types.rs
src/cli/: mod.rs
src/game/: cards.rs  mana.rs  mana_new.rs  mod.rs  state.rs  turns.rs  zones.rs
src/simulation/: analyze.rs  decisions.rs  deck.rs  engine.rs  hand.rs  mana_sim.rs  mod.rs  mulligan.rs  optimize.rs
(+18 files in other folders)
