[package]
name = "mtg-reanimator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.7"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1.0"
indicatif = "0.17"
chrono = "0.4.43"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "game_simulation"
harness = false
